# ocaml-grep

./: .gitignore  LICENSE  README.md  dune-project  lorem_ipsum.txt  ogrep.opam  test1.txt
lib/: dune
regex/: ast.ml  ast.mli  bt.ml  bt.mli  choice.ml  choice.mli  dune  eval.ml  eval.mli  eval_state.mli  eval_test.ml  lexer.ml  lexer.mli  lexer_test.ml  parser.ml  parser.mli  parser_test.ml  regex.ml  regex.mli  st.ml  stateT.ml  stateT.mli  token.ml  token.mli
